--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-header></app-header>
-<app-gallery></app-gallery>
+<div class="container">
+    <app-header></app-header>
+    <app-gallery></app-gallery>
+</div>
