gallery uploader form html #time 30m

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,10 +6,10 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="/" > Photos </a>
+                    <a routerLink="/gallery"  > Photos </a>
                 </li>
                 <li>
-                    <a href="/" > Upload Photos </a>
+                    <a routerLink="/upload"  > Upload Photos </a>
                 </li>
             </ul>
         </div>
