--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
+<app-header></app-header>
 <div class="container">
-    <app-header></app-header>
-    <app-gallery></app-gallery>
+    <router-outlet></router-outlet>
 </div>
