--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-3 col-xs-12 gallery-img" *ngFor="let photo of photos">
-            <img src="{{ photo.url }}" alt="{{ photo.name }}" class="">
+            <img src="{{ photo.url }}" alt="{{ photo.name }}">
         </div>
     </div>
 </div>
