--- a/src/app/uploader/uploader.component.html
+++ b/src/app/uploader/uploader.component.html
@@ -1,1 +1,56 @@
-<p>uploader works!</p>
+<div class="row">
+    <div class="col-xs-3"></div>
+    <div class="col-xs-6">
+        <form [formGroup]="uploadForm">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" id="name" formControlName="name" class="form-control">
+                    </div>
+                </div>
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <label for="url">Image URL</label>
+                        <input type="text" id="url" formControlName="url" class="form-control">
+                    </div>
+                </div>
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <label for="description">Description</label>
+                        <textarea class="form-control" id="description" formControlName="description" rows="3"></textarea>
+                    </div>
+                </div>
+                <div class="col-xs-12">
+                    <button class="btn btn-success" type="submit" [disabled]="!uploadForm.valid">
+                        Upload
+                    </button>
+                </div>
+            </div>
+            <!-- <div class="row">
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <label for="url">Image URL</label>
+                        <input type="text" id="url" formControlName="url" class="form-control">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <label for="description">Description</label>
+                        <textarea class="form-control" id="description" formControlName="description" rows="3"></textarea>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <button class="btn btn-success" type="submit" [disabled]="!uploadForm.valid">
+                        Upload
+                    </button>
+                </div>
+            </div> -->
+        </form>
+    </div>
+    <div class="col-xs-3"></div>
+</div>
