--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,10 +6,13 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li>
-                    <a routerLink="/gallery"  > Photos </a>
+                    <a routerLink="/gallery"  > My Photos </a>
                 </li>
                 <li>
                     <a routerLink="/upload"  > Upload Photos </a>
+                </li>
+                <li>
+                    <a routerLink="/search"  > Search Photos </a>
                 </li>
             </ul>
         </div>
