--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,1 +1,23 @@
-<p>search works!</p>
+<div class="container">
+    <h1 class="text-center">Flickr Search Photos</h1>
+    <div class="form-group">
+        <input type="search" class="form-control" (keyup)="searchPhotos($event)">
+    </div>
+    <div class="row">
+        <div class="col-sm-12 col-md-6 col-lg-4" *ngFor="let image of images">
+            <div class="card">
+                <a href="{{image.url}}_b.jpg">
+                    <img src="{{image.url}}_m.jpg" alt="{{image.title}}" title="{{image.title}}">
+                </a>
+            </div>
+        </div>
+    </div>
+    <div
+      class="search-results"
+      infiniteScroll
+      [infiniteScrollDistance]="2"
+      [infiniteScrollThrottle]="50"
+      (scrolled)="onScroll()"
+    ></div>
+</div>
+
