rewrite flickr service #time 30m

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -4,10 +4,10 @@
         <input type="search" class="form-control" (keyup)="searchPhotos($event)">
     </div>
     <div class="row">
-        <div class="col-sm-12 col-md-6 col-lg-4" *ngFor="let image of images">
+        <div class="col-sm-12 col-md-6 col-lg-4" *ngFor="let image of images;let i = index">
             <div class="card">
-                <a href="{{image.url}}_b.jpg">
-                    <img src="{{image.url}}_m.jpg" alt="{{image.title}}" title="{{image.title}}">
+                <a href="{{image.url}}">
+                    <img src="{{image.url}}" alt="{{image.title}}" title="{{image.title}}">
                 </a>
             </div>
         </div>
