--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,20 +1,22 @@
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a href="/" class="navbar-brand">My Gallery App</a>
+<div class="row">
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a href="/" class="navbar-brand">My Gallery App</a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a routerLink="/gallery"  > My Photos </a>
+                    </li>
+                    <li>
+                        <a routerLink="/upload"  > Upload Photos </a>
+                    </li>
+                    <li>
+                        <a routerLink="/search"  > Search Photos </a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li>
-                    <a routerLink="/gallery"  > My Photos </a>
-                </li>
-                <li>
-                    <a routerLink="/upload"  > Upload Photos </a>
-                </li>
-                <li>
-                    <a routerLink="/search"  > Search Photos </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+    </nav>
+</div>
