--- a/src/app/uploader/uploader.component.html
+++ b/src/app/uploader/uploader.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-3"></div>
-    <div class="col-xs-6">
+    <div class="col-xs-6 form">
         <form [formGroup]="uploadForm" (ngSubmit)="onSubmit()">
             <div class="row">
                 <div class="col-xs-12">
