--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -24,7 +24,7 @@
     <app-photo-modal 
         [photos]="images" 
         [photoPointer]="photoPointer"
-        (closePhotModal)="closePhotModal()"
+        (closePhotoModal)="closePhotoModal()"
     >
     </app-photo-modal>
 </div>
