--- a/src/app/gallery/gallery.component.scss
+++ b/src/app/gallery/gallery.component.scss
@@ -5,4 +5,35 @@
         height: 350px;
         object-fit : cover;
     }
+    a {
+        cursor: pointer;
+    }
+    .remove-image {
+        display: inline;
+        position: absolute;
+        top: 5px;
+        right: 0;
+        border-radius: 10em;
+        padding: 2px 6px 3px;
+        text-decoration: none;
+        font: 700 21px/20px sans-serif;
+        background: #949393;
+        border: 3px solid #fff;
+        color: #FFF;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.5), inset 0 2px 4px rgba(0,0,0,0.3);
+        text-shadow: 0 1px 2px rgba(0,0,0,0.5);
+        -webkit-transition: background 0.5s;
+        transition: background 0.5s;
+    }
+    .remove-image:hover {
+        background: #ed8c49;
+        padding: 3px 7px 5px;
+        top: -2px;
+        right: -2px;
+    }
+    .remove-image:active {
+        background: #ed8c49;
+        top: -1px;
+        right: -1px;
+    }
 }
