--- a/src/app/search/photo-modal/photo-modal.component.html
+++ b/src/app/search/photo-modal/photo-modal.component.html
@@ -7,6 +7,7 @@
         <div class="modal-header">
           <button type="button" class="close"  (click)="onClose()">&times;</button>
           <h4 class="modal-title">Photo Details</h4>
+          <h5 class="modal-title">{{ photo.title }}</h5>
         </div>
         <div class="modal-body">
           <div class="img-modal" >
