--- a/src/app/search/photo-modal/photo-modal.component.scss
+++ b/src/app/search/photo-modal/photo-modal.component.scss
@@ -1,4 +1,5 @@
 .modal {
+    overflow-y: scroll;
     background-color: rgba(0, 0, 0, 0.5);
     transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
     &.modal-open {
